praxis/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: praxis-server
  namespace: praxis
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: praxis-server
